--- a/fullstack/package.json
+++ b/fullstack/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev:client": "vite --host --port 3000",
     "dev": "pnpm dev:client",
-    "build:client": "vite build --outDir dist/static",
-    "build": "rm -rf dist && pnpm build:client && cp package.json dist && touch dist/build.flag"
+    "build:client": "vite build --outDir dist",
+    "build": "pnpm build:client",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "clsx": "^2.1.1",
@@ -17,8 +18,8 @@
     "react-dom": "^18.3.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^7.3.0",
-    "redux": "^4.2.1",
     "recharts": "^2.15.1",
+    "redux": "^4.2.1",
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
     "uuid": "^9.0.1",
